# sec-check

./: install.sh  pyproject.toml  test_sec_check.py
sec_check/: __init__.py  cache.py  checkers.py  hook.py  parsers.py
tests/: conftest.py  test_checkers.py  test_hook.py  test_integration.py  test_parsers.py
